# sysarch-acs

./: .gitignore  Bsa_timeout_changes.efi  CMakeLists.txt  CMakePresets.json  README.md  bsa_barrier.efi  bsa_barrier_debug_prints.efi  bsa_failsafe_1024.efi  bsa_failsafe_no_barrier.efi  bsa_failsafe_with_more_timeout.efi  bsa_no_prints_timeout.efi
.github/workflows/: acs_build_check.yml  acs_daily_build_check.yml  sysarch_ci.yml  sysarch_commit.yml  sysarch_daily.yml
apps/baremetal/: acs.h  acs_common.c  acs_globals.c  acs_helpers.c  acs_runtime_init.c  bsa_main.c  pc_bsa_main.c  sbsa_main.c
apps/linux/: bsa-acs-app.bb  sbsa-acs-app.bb
apps/uefi/: Bsa.inf  Drtm.inf  Mem.inf  Mpam.inf  Pfdi.inf  Sbsa.inf  SbsaNist.inf  Unified.inf  Vbsa.inf  acs.h  acs_globals.c  acs_helpers.c  app.c  bsa_main.c  drtm_main.c  mem_test_main.c  mpam_main.c  pc_bsa.inf  pc_bsa_main.c  pfdi_main.c  sbsa_main.c  sbsa_nist_main.c  unified_main.c  vbsa_main.c  xbsa_acpi.inf  xbsa_main.c
docs/baremetal/: README.md
docs/bsa/: README.md  arm_bsa_testcase_checklist.md  arm_bsa_testcase_checklist.rst
docs/common/: RuleBasedGuide.md  cli_args.md  linux_build.md  uefi_build.md
docs/drtm/: README.md  drtm_readme.md
docs/mem_test/: README.md
docs/mpam/: README.md
docs/pc_bsa/: README.md  TPM_PAL_Porting_Guide.md  arm_pc-bsa_testcase_checklist.md  arm_pc-bsa_testcase_checklist.rst
docs/pcie/: ErrorInjection.md  Exerciser.md  PCIeConfigurableHierarchy.md
docs/pfdi/: README.md
docs/sbsa/: README.md  arm_sbsa_nist_user_guide.md  arm_sbsa_testcase_checklist.md  arm_sbsa_testcase_checklist.rst
docs/unified/: README.md  user_guide.rst
docs/vbsa/: README.md  arm_vbsa_architecture_compliance_test_scenario.md  arm_vbsa_testcase_checklist.md
docs/xbsa/: README.md  user_guide.rst
mem_test/: LibCFlat.inf  README.md  bsa_acs_litmus.h  efi_bsa_entry.c  memTestBsaSupport.S  memory_model_tests_scenario_user_guide.rst
mem_test/patches/: mem_test_edk2.patch
pal/baremetal/: README.md  module_config.rst  pal.cmake  run_time_params.rst
pal/include/: pal_print.h  pal_status.h  platform_override.h
pal/uefi_acpi/: PalLib.inf  SbsaPalNistLib.inf  UnifiedPalLib.inf
pal/uefi_dt/: PalLib.inf  UnifiedPalLib.inf
patches/: edk2_bsa_acpi.patch  edk2_bsa_dt.patch  edk2_drtm.patch  edk2_mpam.patch  edk2_pcbsa.patch  edk2_pfdi.patch  edk2_sbsa.patch  edk2_sbsa_nist.patch  edk2_unified_acpi.patch  edk2_vbsa.patch  edk2_xbsa_acpi.patch  nist_sbsa_sts.diff
prebuilt_images/: README.md
test_pool/: Makefile  test.cmake
test_pool/cxl/: cxl003.c
test_pool/drtm/: dl001.c  dl002.c  dl003.c  dl004.c  dl005.c  dl006.c  dl007.c  dl008.c  dl009.c  dl010.c  dl011.c  dl012.c  dl013.c  dl014.c  dl015.c  dl016.c  dl017.c  interface001.c  interface002.c  interface003.c  interface004.c  interface005.c  interface006.c  interface007.c  interface008.c  interface009.c  interface010.c  interface011.c  interface012.c  interface013.c  interface014.c  interface015.c
test_pool/ete/: ete001.c  ete002.c  ete003.c  ete004.c  ete005.c  ete006.c  ete007.c  ete008.c
test_pool/exerciser/: e001.c  e002.c  e003.c  e004.c  e005.c  e006.c  e007.c  e008.c  e010.c  e011.c  e012.c  e013.c  e014.c  e015.c  e016.c  e017.c  e018.c  e019.c  e020.c  e021.c  e022.c  e023.c  e024.c  e025.c  e026.c  e027.c  e028.c  e029.c  e030.c  e033.c  e035.c  e036.c  e039.c  e040.c  e041.c  e043.c  e044.c  e045.c
test_pool/gic/: g001.c  g002.c  g003.c  g004.c  g005.c  g006.c  g007.c  g008.c  g009.c  g010.c  g011.c  g012.c  g013.c  g014.c  g015.c  g016.c  its001.c  its002.c  its003.c  its004.c  its005.c  v2m001.c  v2m002.c  v2m003.c  v2m004.c
test_pool/memory_map/: m001.c  m002.c  m003.c  m004.c  m005.c
test_pool/mpam/: error001.c  error002.c  error003.c  error004.c  error005.c  error006.c  error007.c  error008.c  error009.c  error010.c  error011.c  intr001.c  intr002.c  intr003.c  mem001.c  mem002.c  mem003.c  monitor001.c  monitor002.c  monitor003.c  monitor004.c  mpam001.c  mpam002.c  mpam003.c  mpam004.c  mpam005.c  mpam006.c  mpam007.c  partition001.c  partition002.c  partition003.c  reg001.c  reg002.c  reg003.c
test_pool/nist_sts/: SbsaNistLib.inf  test_n001.c
test_pool/pcie/: p001.c  p002.c  p003.c  p004.c  p005.c  p006.c  p007.c  p008.c  p009.c  p010.c  p011.c  p017.c  p018.c  p019.c  p020.c  p020_data.h  p021.c  p021_data.h  p022.c  p022_data.h  p023.c  p024.c  p024_data.h  p025.c  p025_data.h  p026.c  p026_data.h  p030.c  p031.c  p032.c  p033.c  p035.c  p036.c  p037.c  p038.c  p039.c  p042.c  p043.c  p044.c  p045.c  (+69 more)
test_pool/pe/: pe001.c  pe002.c  pe003.c  pe004.c  pe006.c  pe007.c  pe008.c  pe009.c  pe010.c  pe011.c  pe012.c  pe013.c  pe014.c  pe015.c  pe016.c  pe017.c  pe018.c  pe019.c  pe020.c  pe021.c  pe022.c  pe023.c  pe024.c  pe025.c  pe026.c  pe027.c  pe028.c  pe029.c  pe030.c  pe031.c  pe032.c  pe033.c  pe034.c  pe035.c  pe036.c  pe037.c  pe038.c  pe039.c  pe040.c  pe041.c  (+24 more)
test_pool/peripherals/: d001.c  d002.c  d003.c  d004.c  d005.c
test_pool/pfdi/: pfdi001.c  pfdi002.c  pfdi003.c  pfdi004.c  pfdi005.c  pfdi006.c  pfdi007.c  pfdi008.c  pfdi009.c  pfdi010.c  pfdi011.c  pfdi012.c  pfdi013.c  pfdi014.c  pfdi016.c  pfdi017.c  pfdi018.c  pfdi019.c  pfdi020.c  pfdi021.c  pfdi022.c  pfdi023.c  pfdi024.c  pfdi025.c  pfdi026.c  pfdi027.c  pfdi028.c  pfdi029.c  pfdi030.c  pfdi031.c
test_pool/pmu/: pmu001.c  pmu002.c  pmu003.c  pmu004.c  pmu005.c  pmu006.c  pmu007.c  pmu008.c  pmu009.c
test_pool/power_wakeup/: u001.c  u002.c  u003.c  u004.c  u005.c  u006.c
test_pool/ras/: ras001.c  ras002.c  ras003.c  ras004.c  ras005.c  ras006.c  ras007.c  ras008.c  ras009.c  ras010.c  ras011.c  ras012.c  ras013.c  ras014.c  ras016.c  ras017.c  ras018.c
test_pool/smmu/: i001.c  i002.c  i003.c  i004.c  i005.c  i006.c  i007.c  i008.c  i009.c  i010.c  i011.c  i012.c  i013.c  i014.c  i015.c  i016.c  i017.c  i018.c  i019.c  i020.c  i021.c  i022.c  i023.c  i024.c  i025.c
val/: Makefile  MakefileBSA  MakefileSBSA  SbsaValNistLib.inf  UnifiedValLib.inf  UnifiedValLibRB.inf  ValLib.inf  ValLibRB.inf  val_bsa.cmake  val_pcbsa.cmake  val_sbsa.cmake
(+333 files in other folders)
